# TG_Avatar

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml
src/: __main__.py  application.py  config.py
src/schemas/: __init__.py  context.py  open_weather_map.py
src/services/: __init__.py  avatar_generator.py  open_weather_map_api.py
src/utils/: __init__.py  logger.py
